chore: move includeMeta query field to query zod schemas
